examples/minimal/undefined/UB-CB2-bad.output
Error: UB-CB2
Description: function call has fewer arguments than parameters in function definition.
Type: Undefined behavior.
See also: C11 sec. 6.5.2.2:6, J.2:1 item 38
  at foo(/Users/manasvi/Documents/c-semantics/examples/minimal/undefined/UB-CB2-bad.c:4)
  at main(/Users/manasvi/Documents/c-semantics/examples/minimal/undefined/UB-CB2-bad.c:4)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
