examples/minimal/undefined/UB-CB2-bad.c
int foo();

int main(void){
	foo();
}

int foo(int a, int b){
	return 0;
}
